# pkupop-term-project

./: .cspell.json  .gitignore  CMakeLists.txt  README.md  innosetup.iss
.github/workflows/: windows.yml
docs/: report.tex
docs/fig/: lines-chart.tex  structure-chart.tex
resources/: icon.icns  prompts.json
src/: main.cpp  main_test.cpp
src/common/: globals.cpp  globals.h  globals_test.cpp  settings.cpp  settings.h  settings_test.cpp
src/generator/: generator.cpp  generator.h  generator_test.cpp  openai.cpp  openai.h  openai_test.cpp  prompt.cpp  prompt.h  prompt_test.cpp
src/model/: card.cpp  card.h  database.cpp  database.h  pack.cpp  pack.h
src/ui/: composerdialog.cpp  composerdialog.h  editordialog.cpp  editordialog.h  managerwindow.cpp  managerwindow.h  settingswindow.cpp  settingswindow.h  studywindow.cpp  studywindow.h
src/ui/components/: packcombo.cpp  packcombo.h
